Career Guide footer 👣 Nav + Breadcrumbs 🍞

--- a/static/css/career-guide.css
+++ b/static/css/career-guide.css
@@ -201,3 +201,10 @@ strong a:hover {
         display: none;
     }
 }
+
+@media (min-width: 822px) {
+    .navbar-expand-lg .navbar-nav .nav-link{
+        padding-right: var(--bs-navbar-nav-link-padding-x);
+        padding-left: var(--bs-navbar-nav-link-padding-x);
+    }
+}
