next prev wording 📝

--- a/templates/pages/career_guide/guide.html
+++ b/templates/pages/career_guide/guide.html
@@ -171,12 +171,12 @@
         <div class="d-flex justify-content-between pt-5">
             <div>
                 {% if prev_page %}
-                    <a href="/swe_career_guide/{{ prev_page }}" class="btn btn-primary"> ← Previous Page </a>
+                    <a href="/swe_career_guide/{{ prev_page }}" class="btn btn-primary">← Previous</a>
                 {% endif %}
             </div>
             <div>
                 {% if next_page %}
-                    <a href="/swe_career_guide/{{ next_page }}" class="btn btn-primary"> Next Page → </a>
+                    <a href="/swe_career_guide/{{ next_page }}" class="btn btn-primary">Next →</a>
                 {% endif %}
             </div>
         </div>
