--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -223,10 +223,8 @@
        
         <div class="row m-0 p-0">
         {% block content2 %}{% endblock %}
-        <div class="d-none d-xl-block col-xl-auto mx-auto"></div>
+        <!-- <div class="d-none d-xl-block col-xl-auto mx-auto"></div> -->
         </div>
-        <!-- **********HERE******** -->
-
 
         
     </div>
