--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <!-- Google Analytics "Google tag (gtag.js)" -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKJNMQ58LS"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-YKJNMQ58LS');
+        </script>
+
         <title>Tech Career Time</title>
 
         <!-- Mobile meta req -->
