--- a/templates/base.html
+++ b/templates/base.html
@@ -127,21 +127,31 @@
                     </form>
                     
                     <!-- Web nav -->
-                    <div class="col-0 col-lg-4 d-none d-lg-block m-0" style="padding-top: 12.5px;">
+                    <div class="col-0 col-lg-6 d-none d-lg-block m-0" style="padding-top: 12.5px;">
                         <div class="row">
 
-                            <div class="col-6 m-0">
+                            <div class="col-4 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
                                     href="/search_solutions/None/0"
+                                    style="width: 135px;"
                                 >Coding Solutions</a>
                             </div>
 
-                            <div class="col-6 m-0">
+                            <div class="col-4 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
                                     href="/swe_career_guide/Education/Getting_Started"
+                                    style="width: 145px;"
                                 >SWE Career Guide</a>
+                            </div>
+
+                            <div class="col-4 m-0">
+                                <a 
+                                    class="nav-link nav-bar-page-link" 
+                                    href="/about"
+                                    style="width: 60px;"
+                                >About</a>
                             </div>
 
                         </div>  
@@ -159,7 +169,7 @@
                     -->
 
                     <!-- Small Window; Web/Mobile nav -->  
-                    <button class="btn-group col-2 col-md-1 mt-2 d-block d-lg-none m-0" type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="35,0"> 
+                    <button class="btn-group col-2 col-md-1 mt-2 d-block col-lg-0 d-lg-none m-0" type="button" style="border: none; background: none;" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="35,0"> 
 
                         <svg xmlns="http://www.w3.org/2000/svg" id="svg-menu" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16" class="m-0">
                             <path class="m-0" fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -167,14 +177,18 @@
 
                     </button>
 
-                    <ul class="dropdown-menu dropdown-menu-end p-0 m-0 text-center" style="border-radius: 0px 0px 0px 15px; border: none; float: right; width: 150px;">
+                    <ul class="dropdown-menu dropdown-menu-end p-0 m-0 text-center col-lg-0 d-lg-none" style="border-radius: 0px 0px 0px 15px; border: none; float: right; width: 150px;">
                         <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
                         <li class="m-0">
                             <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None/0">Coding Solutions</a>
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                         <li class="m-0">
-                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide/Education/Getting_Started" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide/Education/Getting_Started">SWE Career Guide</a>
+                        </li>
+                        <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
+                        <li class="m-0">
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/about" style="border-radius: 0px 0px 0px 15px;">About</a>
                         </li>
                     </ul>
 
@@ -186,7 +200,7 @@
                         }, true);
                     </script>
           
-                    <div class="col-0 col-lg-1"></div>
+                    <!-- <div class="col-0 col-lg-0"></div> -->
                  
                         
                 </div>
@@ -215,39 +229,61 @@
             <div class="container text-center text-md-start mt-0">
                 <!-- Grid row -->
                 <div class="row mt-3">
-                <!-- Grid column -->
                     
         
-                <!-- Grid column -->
-                <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
-                    <p>
-                        <a href="/">Home page</a>
-                    </p>
-                    <p>
-                        <a href="/search_solutions/None/0">Coding Solutions</a>
-                    </p>
-                    <p>
-                        <a href="/swe_career_guide/Education/Getting_Started">SWE Career Guide</a>
-                    </p>
-                    <p class="pt-5" style="color: black">
-                        © 2024 Copyright:
-                        <a class="text-reset fw-bold" href="/">Tech Career Time</a>
-                    </p>
-                </div>
-                <!-- Grid column -->
-        
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                  
-                </div>
-                <!-- Grid column -->
-        
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                </div>
-                <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <p>
+                            <a href="/">Home page</a>
+                        </p>
+                        <p>
+                            <a href="/search_solutions/None/0">Coding Solutions</a>
+                        </p>
+                        
+                    </div>
+                    <!-- Grid column -->
+            
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <p>
+                            <a href="/swe_career_guide/Education/Getting_Started">SWE Career Guide</a>
+                        </p>
+                        <p>
+                            <a href="/about">About</a>
+                        </p>
+                        
+                    </div>
+                    <!-- Grid column -->
+            
+                    <!-- Grid column -->
+                    <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
+                    <!-- <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"> -->
+                        
+                        
+                        
+                        
+                    </div>
+                    <!-- Grid column -->
+
                 </div>
                 <!-- Grid row -->
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    
+        
+                    <!-- Grid column -->
+                    <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
+                        <p class="pt-5" style="color: black">
+                            © 2024 Copyright:
+                            <a class="text-reset fw-bold" href="/">Tech Career Time</a>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4"></div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"></div>
+                    <!-- Grid column -->    
+                </div>
+                <!-- Grid row -->
+
             </div>
             </section>
             <!-- Section: Links  -->
