--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -54,7 +54,7 @@
                             <span class="link-emoji" id="link-emoji">🔗</span>
                         </h3>
 
-                        <p>Over the last five years, I've had the thrill of shaping tech across giants and startups alike—from Adobe, where I boosted product data by a whopping 35%, to Verizon, speeding up solutions faster than you can say "reboot!" 🌐</p> 
+                        <p>Over the years, I've had the thrill of shaping tech across giants and startups alike—from Adobe, where I boosted product data by a whopping 35%, to Verizon, speeding up solutions faster than you can say "reboot!" 🌐</p> 
                         <p>At Adobe, not only did I push data boundaries, but I also got to tinker with CI/CD pipelines that would make any tech geek swoon. And now? I’m steering the ship at a stealth startup in San Francisco, refining code and transforming tech workflows with my super SWE skills. 💻🛠️</p>
 
                         <h3 class="pt-4 pb-1" style="display: flex; align-items: center;">
