--- a/templates/base.html
+++ b/templates/base.html
@@ -326,7 +326,7 @@
                     <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-4">
                     <!-- <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"> -->
                         
-                        <p>Tech Career Time is committed to fostering your success in the technology industry. Should you have any inquiries or require assistance, please do not hesitate to contact us at: <a href="mailto:techcareertime@gmail.com">TechCareerTime@gmail.com</a></p>
+                        <p>Tech Career Time is committed to fostering your success in the technology industry. Should you have any inquiries or require assistance, please do not hesitate to contact: <a href="mailto:techcareertime@gmail.com">TechCareerTime@gmail.com</a></p>
                         
                         
                     </div>
