🔐 Privacy Policy DONE👍

--- a/templates/pages/privacy/privacy_policy.html
+++ b/templates/pages/privacy/privacy_policy.html
@@ -23,7 +23,7 @@
                         <h3 class="pt-4 pb-1" id="introduction">1. INTRODUCTION</h3>
                         <!-- <p>Tech Career Time is dedicated to safeguarding your personal data and respecting your privacy. We collect and process personal data with utmost care.</p> -->
                         <p>Tech Career Time is dedicated to safeguarding and respecting your privacy. We collect and process data with utmost care.</p>
-                        <p>Efforts have been made to either obtain user consent, restrict, or eliminate data collection in countries with stringent data protection laws.</p>
+                        <p>Efforts have been made to either obtain the required user consent, restrict, or eliminate data collection in countries with stringent data protection laws.</p>
                         <!-- <p>This privacy statement clarifies the purpose of processing your personal data, the methods we employ to collect, manage, and protect all provided personal data, and how this information is utilized.</p> -->
                         <p>This privacy statement clarifies the purpose of processing your data, the methods we employ to collect, manage, and protect all provided data, and how this information is utilized.</p>
                         <p>
@@ -59,14 +59,14 @@
                         <!-- <h3 class="pt-4 pb-1" id="introduction">4. HOW DO WE PROTECT AND SAFEGUARD YOUR PERSONAL DATA?</h3> -->
                         <h3 class="pt-4 pb-1" id="introduction">4. HOW DO WE PROTECT AND SAFEGUARD YOUR DATA?</h3>
                         <!-- <p>All personal data in electronic format, is securely stored within Tech Career Time's Google Analytics infrastructure.</p> -->
-                        <p>All data in electronic format, is securely stored within Tech Career Time's Google Analytics infrastructure.</p>
+                        <!-- <p>All data in electronic format, is securely stored.</p> -->
                         <!-- <p>To safeguard your personal data, a series of technical and organizational measures have been implemented. Technical measures encompass appropriate actions to mitigate online security risks, prevent data loss, data alteration, or unauthorized access, considering both the risk associated with the processing and the nature of the personal data processed. Organizational measures are in place to ensure that access to personal data is strictly limited to authorized personnel who have a legitimate need to access the data for the purposes of this processing operation.</p> -->
                         <p>To safeguard your data, a series of technical and organizational measures have been implemented. Technical measures encompass appropriate actions to mitigate online security risks, prevent data loss, data alteration, or unauthorized access, considering both the risk associated with the processing and the nature of the data processed. Organizational measures are in place to ensure that access to data is strictly limited to authorized personnel who have a legitimate need to access the data for the purposes of this processing operation.</p>
 
                         <!-- <h3 class="pt-4 pb-1" id="introduction">5. WHO HAS ACCESS TO YOUR PERSONAL DATA AND TO WHOM IS IT DISCLOSED?</h3> -->
                         <h3 class="pt-4 pb-1" id="introduction">5. WHO HAS ACCESS TO YOUR DATA AND TO WHOM IS IT DISCLOSED?</h3>
                         <!-- <p>Access to personal data is granted exclusively to Google Analytics and designated staff at Tech Career Time who are directly involved in this processing operation. Furthermore, access is strictly limited to authorized personnel on a "need to know" basis.</p> -->
-                        <p>Access to data is granted exclusively to Google products, affiliates and designated staff at Tech Career Time who are directly involved in this processing operation. Furthermore, access is strictly limited to authorized personnel on a "need to know" basis.</p>
+                        <p>Access to data is granted exclusively to Google products, affiliates and designated staff at Tech Career Time who are directly involved in this processing operation. Furthermore, access to data at Tech Career Time is restricted to authorized personnel who have a legitimate requirement for access.</p>
                         <p>The information collected may be disclosed to third parties as required by law or as necessary for the purposes for which it was collected.</p>
 
                         <h3 class="pt-4 pb-1" id="introduction">6. CONTACT INFORMATION</h3>
@@ -112,6 +112,7 @@
                             <li><b>Purpose: </b>These cookies allow Google AdSense to display ads that are relevant to the user, thus providing more targeted advertising that can be more engaging to users and potentially more profitable for publishers.</li>
                         </ul>
                         <p>Both Google Analytics and Google AdSense cookies are critical for website owners who rely on data and advertising revenue. </p>
+                        <p>In regions subject to data restrictions, when a cookie consent popup is presented, we collect the necessary data based on your consent preferences to ascertain your choices. If no popup appears, we set cookies in accordance with local data protection laws.</p>
 
                         <h3 class="pt-4 pb-1" id="introduction">Third-Party Cookies</h3>
                         <p>Some pages on our site feature content from external providers, such as YouTube. Additionally, there are links to external websites over which we have no control. Users are advised to exercise discretion before navigating to a new website.</p>
