--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -19,7 +19,7 @@
 
                 <!-- YouTube Video(s) -->
                 <!-- Carousel  -->
-                {% if video.has_video %} 
+                <!-- {% if video.has_video %} 
                     <div class="row py-2 text-center m-0 px-0 py-5">
 
                         <div id="carousel1" class="carousel slide p-0 m-0" data-bs-ride="carousel">
@@ -56,7 +56,7 @@
                         </div>
 
                     </div>
-                {% endif %} 
+                {% endif %}  -->
 
                 {% if how_to %}
                     <div class="row py-2 m-0 px-0">
@@ -145,18 +145,18 @@
     </div>
 
     <!-- 2nd Content box / Seach Res -->
-    {% if search_res %}
+    <!-- {% if search_res %}
         <div class="row p-0 py-md-2 m-0">
             <div class="col-12 p-0 m-0">
                 <div class="p-0 pb-4 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                     <div class="row py-2 m-0 text-center">
                         <h3 class="col-12 m-0">Search Results</h3>
-                    </div>
+                    </div> -->
 
                     <!-- YouTube Video(s) -->
                     <!-- Carousel  -->
-                    {% if search_res.video.has_video %} 
+                    <!-- {% if search_res.video.has_video %} 
                         <div class="row py-2 text-center m-0 p-0">
 
                             <div id="carouse2" class="carousel slide m-0 p-0" data-bs-ride="carousel">
@@ -193,7 +193,7 @@
                             </div>
 
                         </div>
-                    {% endif %} 
+                    {% endif %}  -->
 
                     <!-- Solutions in language tabs -->
                     <!-- <div class="row ppy-2 m-0"> -->
@@ -309,7 +309,7 @@
                 </div>
             </div>
         </div> -->
-    {% endif %} 
+    <!-- {% endif %}  -->
 
     <!-- Prism JS code -->
     <script src="../../../static/js/prism.js"></script>
