--- a/templates/base.html
+++ b/templates/base.html
@@ -410,6 +410,9 @@
                         <p>
                             <a href="/privacy_policy#cookies-policy">Cookies Policies</a>
                         </p>
+                        <p>
+                            <a href="/sitemap">Sitemap</a>
+                        </p>
                         
                     </div>
                     <!-- Grid column -->
