--- a/templates/pages/sitemap.html
+++ b/templates/pages/sitemap.html
@@ -70,17 +70,10 @@
                             </li>
                         </ol>
 
-                        <!-- <h3 class="pt-4 pb-1" style="display: flex; align-items: center;"><span>1-A)&nbsp;</span> 
-                            <a href="/search_solutions/None/0" style="text-decoration: none;" class="header-link pe-2" id="header-link">Coding Solutions</a>
+                        <h3 class="pt-4 pb-1" style="display: flex; align-items: center;"><span>*&nbsp;</span> 
+                            <a href="/sitemap.xml" style="text-decoration: none;" class="header-link pe-2" id="header-link">XML Sitemap</a>
                             <span class="link-emoji" id="link-emoji">🔗</span>
                         </h3>
-                        <ol>
-                            {% for solution in solutions %}
-                            <li>
-                                <b><a href="/code_solution/{{solution.id}}">{{solution.name}}</a></b>
-                            </li>
-                            {% endfor %}
-                        </ol> -->
                         
 
                     </section>
